--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -23,6 +23,11 @@
   background-position: right 7px center;
   background-size: 15px 15px;
   background-repeat: no-repeat;
+  // opacity: 0.6;
+  &::placeholder {
+    color: var(--secondary-text-color);
+    letter-spacing: 0.3px;
+  }
 }
 .movie__container {
   margin-top: 10px;
@@ -75,14 +80,18 @@
   width: 25px;
   height: 25px;
   position: absolute;
-  top: 160px;
-  right: 0;
-  background-image: url("/img/add.png");
+  top: 70%;
+  right: 5%;
+  background-image: url("/img/bookmark.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   border: 1px solid transparent;
   background-color: transparent;
+  opacity: 0.5;
+  &:hover {
+    opacity: 1;
+  }
 }
 .movie__textbox {
 }
