--- a/css/style.css
+++ b/css/style.css
@@ -1,323 +1,1 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-html {
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-}
-body {
-  margin: 0;
-}
-main {
-  display: block;
-}
-h1 {
-  font-size: 2em;
-}
-hr {
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-a {
-  background-color: rgba(0, 0, 0, 0);
-}
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
-}
-b,
-strong {
-  font-weight: bolder;
-}
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sub {
-  bottom: -0.25em;
-}
-sup {
-  top: -0.5em;
-}
-img {
-  border-style: none;
-}
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-button,
-input {
-  overflow: visible;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-legend {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
-progress {
-  vertical-align: baseline;
-}
-textarea {
-  overflow: auto;
-}
-[type="checkbox"],
-[type="radio"] {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0;
-}
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-[type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
-details {
-  display: block;
-}
-summary {
-  display: list-item;
-}
-template {
-  display: none;
-}
-[hidden] {
-  display: none;
-}
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-* {
-  margin: 0;
-  padding: 0;
-}
-img,
-picture,
-svg {
-  display: block;
-  max-width: 100%;
-}
-html {
-  height: 100%;
-}
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  height: 100%;
-  font-family: "Oswald", sans-serif;
-  font-weight: 500;
-  font-size: 15px;
-  color: var(--main-text-color);
-  background-color: var(--main-bg-color);
-  font-size: 15px;
-}
-main {
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
-}
-ul {
-  padding-left: 0;
-  list-style: none;
-}
-li {
-  text-decoration: none;
-}
-:root {
-  --main-text-color: #000;
-  --main-bg-color: #eeeeee;
-}
-.dark {
-  --main-text-color: #fff;
-  --main-bg-color: #05151e;
-}
-.dark .movie__favorites {
-  background-image: url("/img/bookmark.svg");
-}
-.container {
-  max-width: 1320px;
-  width: 100%;
-  padding: 0 20px;
-  margin: 0 auto;
-}
-.header {
-  padding-top: 25px;
-  margin-bottom: 30px;
-}
-.movie {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.logo {
-  text-decoration: none;
-  color: var(--main-text-color);
-}
-.movie__input {
-  outline: none;
-  border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0);
-  font-size: 12px;
-  padding: 4px 6px;
-  background-image: url("/img/search-default.png");
-  background-position: right 7px center;
-  background-size: 15px 15px;
-  background-repeat: no-repeat;
-}
-.movie__container {
-  margin-top: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-  gap: 10px;
-}
-.movie__favorites {
-  width: 25px;
-  height: 25px;
-  background-image: url("/img/bookmarked.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: 1px solid rgba(0, 0, 0, 0);
-  background-color: rgba(0, 0, 0, 0);
-}
-.movie__theme {
-  width: 25px;
-  height: 25px;
-  background-image: url("/img/moon-light.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: 1px solid rgba(0, 0, 0, 0);
-  background-color: rgba(0, 0, 0, 0);
-}
-.main {
-  padding-bottom: 30px;
-}
-.main__title {
-  margin-bottom: 25px;
-}
-.main__list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-.movie__item {
-  position: relative;
-  max-width: 305px;
-  width: 100%;
-}
-.movie__fav {
-  width: 25px;
-  height: 25px;
-  position: absolute;
-  top: 70%;
-  right: 5%;
-  background-image: url("/img/add.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: 1px solid rgba(0, 0, 0, 0);
-  background-color: rgba(0, 0, 0, 0);
-}
-.footer {
-  padding-bottom: 30px;
-}
-.footer__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-.footer__copyright {
-  font-size: 10px;
-} /*# sourceMappingURL=style.css.map */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em}hr{-webkit-box-sizing:content-box;box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:rgba(0,0,0,0)}abbr[title]{border-bottom:none;text-decoration:underline;-webkit-text-decoration:underline dotted;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{-webkit-box-sizing:border-box;box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{-webkit-box-sizing:border-box;box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}*,*::before,*::after{-webkit-box-sizing:border-box;box-sizing:border-box}*{margin:0;padding:0}img,picture,svg{display:block;max-width:100%}html{height:100%}body{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;height:100%;font-family:"Oswald",sans-serif;font-weight:500;font-size:15px;color:var(--main-text-color);background-color:var(--main-bg-color);font-size:15px}main{-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1}ul{padding-left:0;list-style:none}li{text-decoration:none}:root{--main-text-color: #000;--main-bg-color: #eeeeee;--secondary-text-color: #99a99b}.dark{--main-text-color: #fff;--main-bg-color: #05151e;--secondary-text-color: #99a99b}.dark .movie__favorites{background-image:url("/img/bookmark.svg")}.dark .movie__theme{background-image:url("/img/sun.png")}.dark .movie__input{background-color:#282326;background-image:url("/img/search-dark.png")}.container{max-width:1320px;width:100%;padding:0 20px;margin:0 auto}.header{padding-top:25px;margin-bottom:30px}.movie{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.logo{text-decoration:none;color:var(--main-text-color)}.movie__input{outline:none;border-radius:8px;border:1px solid rgba(0,0,0,0);font-size:12px;padding:4px 6px;background-image:url("/img/search-default.png");background-position:right 7px center;background-size:15px 15px;background-repeat:no-repeat}.movie__input::-webkit-input-placeholder{color:var(--secondary-text-color);letter-spacing:.3px}.movie__input::-moz-placeholder{color:var(--secondary-text-color);letter-spacing:.3px}.movie__input:-ms-input-placeholder{color:var(--secondary-text-color);letter-spacing:.3px}.movie__input::-ms-input-placeholder{color:var(--secondary-text-color);letter-spacing:.3px}.movie__input::placeholder{color:var(--secondary-text-color);letter-spacing:.3px}.movie__container{margin-top:10px;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end;gap:10px}.movie__favorites{width:25px;height:25px;background-image:url("/img/bookmarked.svg");background-position:center;background-repeat:no-repeat;background-size:cover;border:1px solid rgba(0,0,0,0);background-color:rgba(0,0,0,0)}.movie__theme{width:25px;height:25px;background-image:url("/img/moon-light.png");background-position:center;background-repeat:no-repeat;background-size:cover;border:1px solid rgba(0,0,0,0);background-color:rgba(0,0,0,0)}.main{padding-bottom:30px}.main__title{margin-bottom:25px}.main__list{display:grid;grid-template-columns:repeat(2, 1fr);gap:15px;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.movie__item{position:relative;max-width:305px;width:100%}.movie__fav{width:25px;height:25px;position:absolute;top:70%;right:5%;background-image:url("/img/bookmark.svg");background-position:center;background-repeat:no-repeat;background-size:cover;border:1px solid rgba(0,0,0,0);background-color:rgba(0,0,0,0);opacity:.5}.movie__fav:hover{opacity:1}.footer{padding-bottom:30px}.footer__wrapper{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.footer__copyright{font-size:10px}/*# sourceMappingURL=style.css.map */
