--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,13 +1,26 @@
 :root {
   --main-text-color: #000;
   --main-bg-color: #eeeeee;
+
+  --secondary-text-color: #99a99b;
 }
 
 .dark {
   --main-text-color: #fff;
   --main-bg-color: #05151e;
+
+  --secondary-text-color: #99a99b;
 }
 
 .dark .movie__favorites {
   background-image: url("/img/bookmark.svg");
+}
+
+.dark .movie__theme {
+  background-image: url("/img/sun.png");
+}
+
+.dark .movie__input {
+  background-color: #282326;
+  background-image: url("/img/search-dark.png");
 }
