--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -41,3 +41,9 @@ ul {
 li {
   text-decoration: none;
 }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
+}
