--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -66,7 +66,7 @@
 .main__list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: minmax(200px, 1fr);
+  // grid-template-rows: repeat(5, minmax(195px, 205px));
   gap: 20px;
   justify-content: center;
 }
@@ -75,13 +75,15 @@
   max-width: 305px;
   width: 100%;
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.95);
-  // border: 2px solid #fff;
 }
 .movie__img {
   position: relative;
   transition: all 0.5s ease;
+  // max-height: 195px;
+  // max-width: 305px;
+  // height: 100%;
   &:hover {
-    // opacity: 0.8;
+    // opacity: 0.1;
     filter: blur(5px);
   }
 }
@@ -226,6 +228,7 @@
 @media only screen and (min-width: 1100px) {
   .main__list {
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: min-content;
   }
   .logo {
     font-weight: bold;
