--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -33,3 +33,6 @@
 .dark .element__play {
   background-image: url("/img/play-dark.png");
 }
+.dark .element__close {
+  background-image: url("/img/close-dark.png");
+}
