--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -7,6 +7,10 @@
   --title-light-color: #fff;
   --border-color: #000;
   --type-background-color: #33bbc5;
+  --md-dark-color: #1d1d1d;
+  --dark-color: #171717;
+  --light-dark-color: #292929;
+  --yellow-color: #d4aa11;
 }
 
 .dark {
